--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "tailwind-merge": "^3.3.0"
   },
